--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ name = "kernel"
 path = "src/main.rs"
 
 [dependencies]
+
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+cortex-a = "6.x.x"
