--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ lto = true
 
 [features]
 default = []
-bsp_rpi3 = []
-bsp_rpi4 = []
+bsp_rpi3 = ["tock-registers"]
+bsp_rpi4 = ["tock-registers"]
 
 [[bin]]
 name = "kernel"
@@ -18,6 +18,12 @@ path = "src/main.rs"
 
 [dependencies]
 
+[dependencies.tock-registers]
+version = "~0.7"
+default-features = false
+features = ["register_types"]
+optional = true
+
 [target.'cfg(target_arch = "aarch64")'.dependencies]
-cortex-a = "6.x.x"
-spin = "^0.9"
+cortex-a = "~6"
+spin = "~0.9"
