--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,4 @@ optional = true
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 cortex-a = "~6"
-spin = "~0.9"
+spin = { version = "~0.9", default_features = false, features = ["spin_mutex"] }
