Split out library and binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ bsp_rpi4 = ["tock-registers"]
 name = "kernel"
 path = "src/main.rs"
 
+[lib]
+name = "libkernel"
+test = false
+
 [dependencies]
 
 [dependencies.tock-registers]
